; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_pcwd_usb.c_usb_pcwd_get_timeleft.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_pcwd_usb.c_usb_pcwd_get_timeleft.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_pcwd_private = type { i32 }

@CMD_READ_WATCHDOG_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_pcwd_private*, i32*)* @usb_pcwd_get_timeleft to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usb_pcwd_get_timeleft(%struct.usb_pcwd_private* %0, i32* %1) #0 {
  %3 = alloca %struct.usb_pcwd_private*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i8, align 1
  store %struct.usb_pcwd_private* %0, %struct.usb_pcwd_private** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load %struct.usb_pcwd_private*, %struct.usb_pcwd_private** %3, align 8
  %8 = load i32, i32* @CMD_READ_WATCHDOG_TIMEOUT, align 4
  %9 = call i32 @usb_pcwd_send_command(%struct.usb_pcwd_private* %7, i32 %8, i8* %5, i8* %6)
  %10 = load i8, i8* %5, align 1
  %11 = zext i8 %10 to i32
  %12 = shl i32 %11, 8
  %13 = load i8, i8* %6, align 1
  %14 = zext i8 %13 to i32
  %15 = add nsw i32 %12, %14
  %16 = load i32*, i32** %4, align 8
  store i32 %15, i32* %16, align 4
  ret i32 0
}

declare dso_local i32 @usb_pcwd_send_command(%struct.usb_pcwd_private*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
